<resources>
    <string name="app_name">Foodify</string>
    <string name="mobile_number_10_digits">Mobile Number(10 digits)</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_sign_up_now">Don\'t have an account?Sign up now</string>
    <string name="password">Password</string>
    <string name="forgot_password_text">Enter your registered mobile number and email address below:</string>
    <string name="email_address">Email Address</string>
    <string name="next">Next</string>
    <string name="new_password_min_4_characters">New Password(Min. 4 characters)</string>
    <string name="password_min_4_characters">Password(Min. 4 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="otp_4_characters">OTP(4 characters)</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="user_name">Username</string>
    <string name="_91_80772332390">+91 80772332390</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="favourite_restaurants">Favourite Restaurants</string>
    <string name="order_history">Order History</string>
    <string name="faq_s">FAQ\'s</string>
    <string name="logout">Logout</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_restaurants">Search Restaurants</string>
    <string name="pind_tadka">Pind tadka</string>
    <string name="_280_person">280/person</string>
    <string name="_4_1">4.1</string>
    <string name="error_msg">Some error occurred</string>
    <string name="choose_from_menu_listed_below">Choose from menu listed below:</string>
    <string name="_1">1</string>
    <string name="rs_100">Rs. 100</string>
    <string name="add">Add</string>
    <string name="proceed_to_cart">Proceed to Cart</string>
    <string name="preferences_file_name">User Preferences</string>
    <string name="faq_title">Frequently Asked Questions</string>
    <string name="your_previous_orders_are_listed_below">Your previous orders are listed below:</string>
    <string name="my_cart">My Cart</string>
    <string name="ordering_from">Ordering From:</string>
    <string name="success">Success</string>
    <string name="your_order_has_been_placed_successfully">Your order has been placed successfully.</string>
    <string name="ok">Ok</string>
    <string name="no_orders_found">No Orders Found</string>
</resources>