<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

    <item
        android:id="@+id/home"
        android:icon="@drawable/home"
        android:title="@string/home" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/profile"
        android:title="@string/my_profile" />
    <item
        android:id="@+id/favourite_restaurant"
        android:icon="@drawable/favourite"
        android:title="@string/favourite_restaurants" />
    <item
        android:id="@+id/order_history"
        android:icon="@drawable/order_history"
        android:title="@string/order_history" />
    <item
        android:id="@+id/faq"
        android:icon="@drawable/faq"
        android:title="@string/faq_s" />
    <item
        android:id="@+id/logout"
        android:icon="@drawable/logout"
        android:title="@string/logout" />
    </group>

</menu>