<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/index"
                android:layout_width="50dp"
                android:layout_height="80dp"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"
                android:layout_alignParentStart="true"
                android:text="@string/_1"/>

            <TextView
                android:id="@+id/itemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content_spacing1"
                android:layout_marginEnd="20dp"
                android:layout_toStartOf="@+id/addBtn"
                android:layout_toEndOf="@id/index"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rs_100"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_below="@id/itemName"
                android:layout_toEndOf="@+id/index"/>

            <Button
                android:id="@+id/addBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/content_spacing1"
                android:backgroundTint="@color/colorAccent"
                android:layout_gravity="center_vertical"
                android:layout_alignParentEnd="true"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>