<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="15dp"
    app:cardElevation="1dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/success"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/content_spacing3"
            app:lottie_autoPlay="true"
            app:lottie_fileName="success.json"
            app:lottie_loop="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_spacing3"
            android:gravity="center_horizontal"
            android:text="@string/your_order_has_been_placed_successfully"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/okBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:background="@drawable/button_round_corners"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/content_spacing3"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>